<resources>
    <string name="account_input_hint">請輸入手機條碼</string>
    <string name="password_input_hint">請輸入碼證碼</string>
    <string name="login">登入</string>
    <string name="this_month">本月發票</string>
    <string name="last_month">上月發票</string>
    <string name="custom_month">自選區間</string>
    <string name="prize_record">中獎記錄</string>
    <string name="barcode_hint">若掃不到條碼可將螢幕調到最亮試看看</string>
    <string name="barcode_hint_no_login">請先點擊前往App登入載具</string>
    <string name="bottom_item_title_prize_numbers">查詢對獎號碼</string>
    <string name="bottom_item_title_query_carrier_invoice">查詢載具發票</string>
    <string name="bottom_item_title_manual_input_numbers_">輸入號碼對獎</string>
    <string name="bottom_item_title_settings">設定</string>
    <string name="number_input_hint">請輸入發票後三碼</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="button_clear">清除</string>
    <string name="number0">0</string>
    <string name="button_switch_month">月份</string>
    <string-array name="prize_name_array">
        <item>特別獎</item>
        <item>特獎</item>
        <item>頭獎</item>
        <item>二獎</item>
        <item>三獎</item>
        <item>四獎</item>
        <item>五獎</item>
        <item>六獎</item>
        <item>增開六獎</item>
    </string-array>
    <string-array name="prize_description_array">
        <item>與特別獎號碼相同者獎金1,000萬元</item>
        <item>與特獎號碼相同者獎金200萬元</item>
        <item>與頭獎號碼相同者獎金20萬元</item>
        <item>與頭獎中獎號碼末7位相同者各得獎金4萬元</item>
        <item>與頭獎中獎號碼末6位相同者各得獎金1萬元</item>
        <item>與頭獎中獎號碼末5位相同者各得獎金4千元</item>
        <item>與頭獎中獎號碼末4位相同者各得獎金1千元</item>
        <item>與頭獎中獎號碼末3位相同者各得獎金2百元</item>
        <item>與增開六獎號碼末3位相同者各得獎金2百元</item>
    </string-array>
</resources>
