<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_prize_number_term"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="107年發票3、4月六獎[xxx, xxx, xxx, xxx]"
        app:layout_constraintBottom_toTopOf="@+id/et_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_field"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:digits="0123456789"
        android:hint="@string/number_input_hint"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3333" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6666" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/button1"
        style="@style/input_button"
        android:text="@string/number_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h0" />

    <Button
        android:id="@+id/button2"
        style="@style/input_button"
        android:text="@string/number_2"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h0" />

    <Button
        android:id="@+id/button3"
        style="@style/input_button"
        android:text="@string/number_3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h0" />

    <Button
        android:id="@+id/button4"
        style="@style/input_button"
        android:text="@string/number_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_h1" />

    <Button
        android:id="@+id/button5"
        style="@style/input_button"
        android:text="@string/number_5"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toTopOf="@+id/guideline_h1" />

    <Button
        android:id="@+id/button6"
        style="@style/input_button"
        android:text="@string/number_6"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toTopOf="@+id/guideline_h1" />

    <Button
        android:id="@+id/button7"
        style="@style/input_button"
        android:layout_marginBottom="8dp"
        android:text="@string/number_7"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_h2" />

    <Button
        android:id="@+id/button8"
        style="@style/input_button"
        android:layout_marginBottom="8dp"
        android:text="@string/number_8"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toTopOf="@+id/guideline_h2" />

    <Button
        android:id="@+id/button9"
        style="@style/input_button"
        android:layout_marginBottom="8dp"
        android:text="@string/number_9"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toTopOf="@+id/guideline_h2" />

    <Button
        android:id="@+id/button_clear"
        style="@style/input_button"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_h3" />

    <Button
        android:id="@+id/button0"
        style="@style/input_button"
        android:text="@string/number0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintTop_toTopOf="@+id/guideline_h3" />

    <Button
        android:id="@+id/button_switch_month"
        style="@style/input_button"
        android:text="@string/button_switch_month"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintTop_toTopOf="@+id/guideline_h3" />

</android.support.constraint.ConstraintLayout>